--- a/package.json
+++ b/package.json
@@ -5,10 +5,13 @@
   "dependencies": {
     "antd-mobile": "^2.3.1",
     "axios": "^0.19.0",
+    "crypto-js": "^3.1.9-1",
     "http-proxy-middleware": "^0.19.1",
+    "js-md5": "^0.7.3",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1"
   },
