--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "antd": "^3.23.6",
     "antd-mobile": "^2.3.1",
     "axios": "^0.19.0",
     "crypto-js": "^3.1.9-1",
@@ -14,7 +15,8 @@
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
-    "react-transition-group": "^4.3.0"
+    "react-transition-group": "^4.3.0",
+    "redux": "^4.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
